# blackout-gate

./: .env.example  .gitignore  README.md  action.yml  dev.ps1  dev.sh  docker-compose.yml
.blackout/: blackout.yaml
.github/workflows/: blackout-gate.yml
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/scripts/: seed.ts  tsconfig.json
api/src/: index.ts  types.d.ts
api/src/db/: client.ts  migrate.ts
api/src/lib/: token.ts
api/src/plugins/: auth.ts
api/src/routes/: admin.ts  audit.ts  config.ts  evaluate.ts  keys.ts  override.ts
dashboard/: package-lock.json  package.json
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/audit/: page.tsx
dashboard/src/app/dashboard/overrides/: page.tsx
dashboard/src/app/dashboard/settings/: page.tsx
dashboard/src/app/dashboard/windows/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: ApiKeyTable.tsx  AuditFilters.tsx  AuditTable.tsx  BlackoutCalendar.tsx  IssueOverrideModal.tsx  OutcomeBadge.tsx
dashboard/src/hooks/: useAuditLog.ts  useConfig.ts  useKeys.ts  useOverrides.ts
dashboard/src/lib/: api.ts  auth.ts
gate/: Cargo.toml  Dockerfile
gate/src/: audit.rs  config.rs  engine.rs  github.rs  main.rs  override_token.rs  pagerduty.rs  slack.rs
