[package]
name = "blackout-gate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blackout-gate"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
cron = "0.16.0"
hex = "0.4.3"
hmac = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
